3 files modified, 3 added

--- a/src/conditional-projection/conditional-projection.component.html
+++ b/src/conditional-projection/conditional-projection.component.html
@@ -1,3 +1,5 @@
 <div *ngIf="flag">
-  <ng-container *ngTemplateOutlet="content.templateRef"></ng-container>
+  <div *ngFor="let content of contents">
+    <ng-container *ngTemplateOutlet="content.templateRef"></ng-container>
+  </div>
 </div>
